# hackndatalegend

./: .gitignore  AGENTS.md  DATA_SOURCES.md  HACKATHON_PLAN.md  PROJECT.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
app/: __init__.py  app.py  app.yaml  data_access.py  requirements.txt  review_store.py
app/.streamlit/: config.toml
app/data/: ai_opinions.parquet  facility_details_00.parquet  facility_details_01.parquet  facility_details_02.parquet  facility_details_03.parquet  facility_details_04.parquet  facility_details_05.parquet  facility_details_06.parquet  facility_details_07.parquet  flags.parquet  manifest.json  review_index.parquet
config/: facility_schema_contract.json  trust_scoring_rules.json
data/: README.md
data/processed/: district_name_normalization_map.csv  facility_column_profile.csv  facility_ingestion_issues.csv  facility_normalization_issues.csv  facility_review_queue.csv  facility_review_queue.parquet  facility_row_status.csv  facility_trust_signals.parquet  nfhs5_column_mapping.csv  nfhs5_district_health_indicators_clean.csv  (+5 more)
docs/: APP.md  EXTRACTION_CONTRACT.md  FACILITY_INTAKE.md  INGESTION.md  NORMALIZED_FACILITY_LAYER.md  REFERENCE_LAYER.md  TRUST_SCORING.md
prompts_and_pydantic_models/: facility_and_ngo_fields.py  free_form.py  medical_specialties.py  organization_extraction.py
src/: __init__.py  data_quality.py
tests/: __init__.py  test_app_assets.py  test_app_ui.py  test_data_quality.py  test_facility_intake.py  test_normalize_facilities.py  test_processed_data.py  test_review_store.py  test_trust_signals.py
(+29 files in other folders)
