[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "data-readiness-desk"
version = "0.1.0"
description = "Trust and validation workflow for Indian healthcare facility data."
requires-python = ">=3.11,<3.15"
dependencies = [
    "pandas==2.3.3",
    "pyarrow==23.0.0",
    "pydantic==2.12.5",
    "streamlit==1.54.0",
]

[project.scripts]
profile-supplemental-data = "src.profiling.profile_supplemental_data:main"
clean-supplemental-data = "src.profiling.clean_supplemental_data:main"
validate-supplemental-data = "src.validation.validate_supplemental_data:main"
intake-facility-data = "src.ingestion.facility_intake:main"
normalize-facility-data = "src.processing.normalize_facilities:main"
build-facility-trust-signals = "src.scoring.build_trust_signals:main"
build-app-assets = "src.app_data.build_app_assets:main"

[tool.setuptools.packages.find]
include = ["src*"]
